# ninjas-vs-legions

./: .gitignore  Cargo.toml
resources/: README.md
resources/PixelNinja/: ThankYou.txt  ninja1.hxl  ninja1_jump.hxl  ninja1_run.hxl  ninja_attack.hxl  ninja_death.hxl
src/: anchor.rs  game.rs  main.rs  sprite.rs  state.rs
